更新过滤配置文件
更新过滤配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 .settings/.jsdtscope
 .settings/org.eclipse.jdt.core.prefs
 .settings/org.eclipse.wst.common.component
+.settings/org.eclipse.core.resources.prefs
