--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>cl</finalName>
+		<finalName>stock</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
