add save assets
add save assets

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,7 +1,7 @@
 #MySQL Options
 jdbc.password=1234
 jdbc.username=root
-jdbc.url=jdbc:mysql://localhost:3306/stock?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/stock_web?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.maxPoolSize=5
