--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<hibernate.version>3.6.0.Final</hibernate.version>
 		<junit.version>4.11</junit.version>
 		<shiro.version>1.2.3</shiro.version>
+		<poi.version>3.12-beta1</poi.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -246,6 +247,24 @@
 		  	<artifactId>shiro-core</artifactId>
 		  	<version>${shiro.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${poi.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>${poi.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
 
 	</dependencies>
 
@@ -263,6 +282,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
+	
 </project>
